--- a/.htaccess
+++ b/.htaccess
@@ -8,4 +8,4 @@ RewriteCond %{REQUEST_FILENAME} !-d
 RewriteRule ^(.*)$ index.php?/$1 [L]
 
 RewriteCond %{SERVER_PORT} 80
-RewriteRule ^(.*)$ https://www.easymeter.io/$1 [R,L]
+RewriteRule ^(.*)$ https://easymeter.io/$1 [R,L]
